--- a/Numbers.html
+++ b/Numbers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url in the content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=604&y=1284&scale=0.5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fcf2735d81a4a0a0c.png&ox=199&oy=1148&tw=360&title=&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=516&y=1154&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F1317f128557461a1.png&ox=192&oy=1094&tw=434&title=PFam_Lattice_Numbers&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
 <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=604&y=1284&scale=0.5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fcf2735d81a4a0a0c.png&ox=199&oy=1148&tw=360&title=&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=516&y=1154&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F1317f128557461a1.png&ox=192&oy=1094&tw=434&title=PFam_Lattice_Numbers&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
