--- a/Dotted.html
+++ b/Dotted.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 <!--paste template url into content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=471&y=1268&scale=2.34&template=https%3A%2F%2Fclueless-r2.pxls.space%2F649143851c2c9c69.png&ox=199&oy=1148&tw=360&title=&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=612&y=1403&scale=1.05&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fe5ef84cb716f461b.png&ox=192&oy=1094&tw=434&title=PFam_Lattice_Dotted&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=471&y=1268&scale=2.34&template=https%3A%2F%2Fclueless-r2.pxls.space%2F649143851c2c9c69.png&ox=199&oy=1148&tw=360&title=&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=612&y=1403&scale=1.05&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fe5ef84cb716f461b.png&ox=192&oy=1094&tw=434&title=PFam_Lattice_Dotted&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
