--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=402&y=1234&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fe2a10883629313f7.png&ox=192&oy=1144&tw=367&title=PFam_LatticeV3&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=829&y=351&scale=1&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fd1c8a98314f32500.png&ox=546&oy=183&tw=352&title=Pfam_c101&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=402&y=1234&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fe2a10883629313f7.png&ox=192&oy=1144&tw=367&title=PFam_LatticeV3&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=829&y=351&scale=1&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fd1c8a98314f32500.png&ox=546&oy=183&tw=352&title=Pfam_c101&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
