--- a/Numbers.html
+++ b/Numbers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url in the content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=408&y=1292&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Faa92fd9b9a01051b.png&ox=192&oy=1144&tw=367&title=PFam_LatticeV3_Numbers&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=721&y=393&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F13bbcf27a570e8e5.png&ox=546&oy=183&tw=352&title=Pfam_c101_Numbers&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
 <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=408&y=1292&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Faa92fd9b9a01051b.png&ox=192&oy=1144&tw=367&title=PFam_LatticeV3_Numbers&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=721&y=393&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F13bbcf27a570e8e5.png&ox=546&oy=183&tw=352&title=Pfam_c101_Numbers&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
