--- a/Numbers.html
+++ b/Numbers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url in the content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=820&y=326&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2F7ed56fd38e196d09.png&ox=559&oy=231&tw=303&title=Pfam_c101_Numbers_V3&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=658&y=272&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fa76a2181b42d909e.png&ox=546&oy=217&tw=322&title=PFam_Numbers_Full&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
 <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=820&y=326&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2F7ed56fd38e196d09.png&ox=559&oy=231&tw=303&title=Pfam_c101_Numbers_V3&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=658&y=272&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fa76a2181b42d909e.png&ox=546&oy=217&tw=322&title=PFam_Numbers_Full&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
